Update instagram scrapper

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title{% block title %}{% endblock %}</title>
+    <title>{% block title %}{% endblock %}</title>
 
         <!-- Google Font: Source Sans Pro -->
         <link rel="stylesheet"
@@ -133,7 +133,15 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="pages/kanban.html" class="nav-link">
+                            <a href="/evaluating" class="nav-link">
+                                <i class="nav-icon fas fa-angle-right"></i>
+                                <p>
+                                    Evaluasi Data
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/comparison" class="nav-link">
                                 <i class="nav-icon fas fa-angle-right"></i>
                                 <p>
                                     Hasil Perbandingan
