--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,36 @@
 {% extends 'base.html' %}
 
-{% block header %}
+{% block title %}
 Beranda
 {% endblock %}
 
 {%block content %}
-<h2>Beranda</h2>
+
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-header">
+                <h3 class="card-title">Petunjuk Penggunaan</h3>
+            </div>
+            <!-- /.card-header -->
+            <div class="card-body">
+                <ul>
+                    <li>Sipakan dataset sentimen berupa CSV masing-masing untuk IG dan TikTok. Data yang dimasukkan
+                        harus
+                        dengan header "Username" dan "Comment"</li>
+                    <li>Upload dataset di menu Upload Data masing-masing untuk sentimen Instagram dan TikTok</li>
+                    <li>Lakukan text processing di menu Preprocessing Data</li>
+                    <li>Lakukan evaluasi pada dataset di menu Evaluasi Data</li>
+                    <li>Cek perbandingan dataset IG dan TikTok pada menu Hasil Perbandingan</li>
+                </ul>
+            </div>
+            <!-- /.card-body -->
+            <div class="card-footer clearfix">
+                <a href="/upload">
+                    <button class="btn btn-primary">Mulai</button>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
