Update preprocessing data

--- a/templates/preprocessing.html
+++ b/templates/preprocessing.html
@@ -31,6 +31,10 @@ Beranda
                                 <th>Comments</th>
                                 <th>Clean Comments</th>
                                 <th>Label</th>
+                                <th>Pos</th>
+                                <th>Neg</th>
+                                <th>Neu</th>
+                                <th>Compound</th>
                             </tr>
                         </thead>
                     </table>
@@ -61,6 +65,10 @@ Beranda
                                 <th>Comments</th>
                                 <th>Clean Comments</th>
                                 <th>Label</th>
+                                <th>Pos</th>
+                                <th>Neg</th>
+                                <th>Neu</th>
+                                <th>Compound</th>
                             </tr>
                     </table>
                 </div>
@@ -96,6 +104,10 @@ Beranda
                             { "data": "comment" },
                             { "data": "clean_comment" },
                             { "data": "label" },
+                            { "data": "pos" },
+                            { "data": "neg" },
+                            { "data": "neu" },
+                            { "data": "compound" },
                         ]
                     })
                 }
@@ -121,6 +133,10 @@ Beranda
                             { "data": "comment" },
                             { "data": "clean_comment" },
                             { "data": "label" },
+                            { "data": "pos" },
+                            { "data": "neg" },
+                            { "data": "neu" },
+                            { "data": "compound" },
                         ]
                     })
                 }
