--- a/templates/preprocessing.html
+++ b/templates/preprocessing.html
@@ -124,6 +124,7 @@ Beranda
                 url: '/preprocessing-ajax',
                 data: serializedData,
                 success: function (data) {
+                    console.log(data)
                     ttTable.destroy()
                     ttTable = $('table#tt-table').DataTable({
                         data: data,
