--- a/templates/base.html
+++ b/templates/base.html
@@ -139,15 +139,7 @@
                             <a href="/evaluating" class="nav-link">
                                 <i class="nav-icon fas fa-angle-right"></i>
                                 <p>
-                                    Evaluasi Data
-                                </p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="/comparison" class="nav-link">
-                                <i class="nav-icon fas fa-angle-right"></i>
-                                <p>
-                                    Hasil Perbandingan
+                                    Evaluasi dan Hasil Perbandingan
                                 </p>
                             </a>
                         </li>
